Package_Tools/glib/Package_Tools/include-C/glib-2.0/glib/in_arbeit/gvariant.pp


function g_variant_iter_new(value:PGVariant):PGVariantIter;cdecl;external;
function g_variant_iter_init(iter:PGVariantIter; value:PGVariant):Tgsize;cdecl;external;
function g_variant_iter_copy(iter:PGVariantIter):PGVariantIter;cdecl;external;
function g_variant_iter_n_children(iter:PGVariantIter):Tgsize;cdecl;external;
procedure g_variant_iter_free(iter:PGVariantIter);cdecl;external;
function g_variant_iter_next_value(iter:PGVariantIter):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_iter_next(iter:PGVariantIter; format_string:Pgchar; args:array of const):Tgboolean;cdecl;external;
function g_variant_iter_next(iter:PGVariantIter; format_string:Pgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_variant_iter_loop(iter:PGVariantIter; format_string:Pgchar; args:array of const):Tgboolean;cdecl;external;
function g_variant_iter_loop(iter:PGVariantIter; format_string:Pgchar):Tgboolean;cdecl;external;
type
{< private > }
(* Const before type ignored *)
  PGVariantBuilder = ^TGVariantBuilder;
  TGVariantBuilder = record
      u : record
          case longint of
            0 : ( s : record
                partial_magic : Tgsize;
                _type : PGVariantType;
                y : array[0..13] of Tguintptr;
              end );
            1 : ( x : array[0..15] of Tguintptr );
          end;
    end;


  PGVariantParseError = ^TGVariantParseError;
  TGVariantParseError =  Longint;
  Const
    G_VARIANT_PARSE_ERROR_FAILED = 0;
    G_VARIANT_PARSE_ERROR_BASIC_TYPE_EXPECTED = 1;
    G_VARIANT_PARSE_ERROR_CANNOT_INFER_TYPE = 2;
    G_VARIANT_PARSE_ERROR_DEFINITE_TYPE_EXPECTED = 3;
    G_VARIANT_PARSE_ERROR_INPUT_NOT_AT_END = 4;
    G_VARIANT_PARSE_ERROR_INVALID_CHARACTER = 5;
    G_VARIANT_PARSE_ERROR_INVALID_FORMAT_STRING = 6;
    G_VARIANT_PARSE_ERROR_INVALID_OBJECT_PATH = 7;
    G_VARIANT_PARSE_ERROR_INVALID_SIGNATURE = 8;
    G_VARIANT_PARSE_ERROR_INVALID_TYPE_STRING = 9;
    G_VARIANT_PARSE_ERROR_NO_COMMON_TYPE = 10;
    G_VARIANT_PARSE_ERROR_NUMBER_OUT_OF_RANGE = 11;
    G_VARIANT_PARSE_ERROR_NUMBER_TOO_BIG = 12;
    G_VARIANT_PARSE_ERROR_TYPE_ERROR = 13;
    G_VARIANT_PARSE_ERROR_UNEXPECTED_TOKEN = 14;
    G_VARIANT_PARSE_ERROR_UNKNOWN_KEYWORD = 15;
    G_VARIANT_PARSE_ERROR_UNTERMINATED_STRING_CONSTANT = 16;
    G_VARIANT_PARSE_ERROR_VALUE_EXPECTED = 17;
    G_VARIANT_PARSE_ERROR_RECURSION = 18;
;

{ was #define dname def_expr }
function G_VARIANT_PARSE_ERROR : longint; { return type might be wrong }

function g_variant_parser_get_error_quark:TGQuark;cdecl;external;
function g_variant_parse_error_quark:TGQuark;cdecl;external;
{*
 * G_VARIANT_BUILDER_INIT:
 * @variant_type: a const GVariantType*
 *
 * A stack-allocated #GVariantBuilder must be initialized if it is
 * used together with g_auto() to avoid warnings or crashes if
 * function returns before g_variant_builder_init() is called on the
 * builder.
 *
 * This macro can be used as initializer instead of an
 * explicit zeroing a variable when declaring it and a following
 * g_variant_builder_init(), but it cannot be assigned to a variable.
 *
 * The passed @variant_type should be a static GVariantType to avoid
 * lifetime issues, as copying the @variant_type does not happen in
 * the G_VARIANT_BUILDER_INIT() call, but rather in functions that
 * make sure that #GVariantBuilder is valid.
 *
 * |[<!-- language="C" -->
 *   g_auto(GVariantBuilder) builder = G_VARIANT_BUILDER_INIT (G_VARIANT_TYPE_BYTESTRING);
 * ]|
 *
 * Since: 2.50
  }
{#define G_VARIANT_BUILDER_INIT(variant_type)                                          \ }
{                                                                                     \ }
{                                                                                     \ }
{                                                                                     \ }
{        2942751021u /* == GVSB_MAGIC_PARTIAL, see gvariant.c */, variant_type,  0,  \ }
{                                                                                     \ }
{                                                                                     \ }
{   }
(* Const before type ignored *)
function g_variant_builder_new(_type:PGVariantType):PGVariantBuilder;cdecl;external;
procedure g_variant_builder_unref(builder:PGVariantBuilder);cdecl;external;
function g_variant_builder_ref(builder:PGVariantBuilder):PGVariantBuilder;cdecl;external;
(* Const before type ignored *)
procedure g_variant_builder_init(builder:PGVariantBuilder; _type:PGVariantType);cdecl;external;
function g_variant_builder_end(builder:PGVariantBuilder):PGVariant;cdecl;external;
procedure g_variant_builder_clear(builder:PGVariantBuilder);cdecl;external;
(* Const before type ignored *)
procedure g_variant_builder_open(builder:PGVariantBuilder; _type:PGVariantType);cdecl;external;
procedure g_variant_builder_close(builder:PGVariantBuilder);cdecl;external;
procedure g_variant_builder_add_value(builder:PGVariantBuilder; value:PGVariant);cdecl;external;
(* Const before type ignored *)
procedure g_variant_builder_add(builder:PGVariantBuilder; format_string:Pgchar; args:array of const);cdecl;external;
procedure g_variant_builder_add(builder:PGVariantBuilder; format_string:Pgchar);cdecl;external;
(* Const before type ignored *)
procedure g_variant_builder_add_parsed(builder:PGVariantBuilder; format:Pgchar; args:array of const);cdecl;external;
procedure g_variant_builder_add_parsed(builder:PGVariantBuilder; format:Pgchar);cdecl;external;
(* Const before type ignored *)
function g_variant_new(format_string:Pgchar; args:array of const):PGVariant;cdecl;external;
function g_variant_new(format_string:Pgchar):PGVariant;cdecl;external;
(* Const before type ignored *)
procedure g_variant_get(value:PGVariant; format_string:Pgchar; args:array of const);cdecl;external;
procedure g_variant_get(value:PGVariant; format_string:Pgchar);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_new_va(format_string:Pgchar; endptr:PPgchar; app:Pva_list):PGVariant;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure g_variant_get_va(value:PGVariant; format_string:Pgchar; endptr:PPgchar; app:Pva_list);cdecl;external;
(* Const before type ignored *)
function g_variant_check_format_string(value:PGVariant; format_string:Pgchar; copy_only:Tgboolean):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_parse(_type:PGVariantType; text:Pgchar; limit:Pgchar; endptr:PPgchar; error:PPGError):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_new_parsed(format:Pgchar; args:array of const):PGVariant;cdecl;external;
function g_variant_new_parsed(format:Pgchar):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_new_parsed_va(format:Pgchar; app:Pva_list):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_parse_error_print_context(error:PGError; source_str:Pgchar):Pgchar;cdecl;external;
function g_variant_compare(one:Tgconstpointer; two:Tgconstpointer):Tgint;cdecl;external;
type
{< private > }
  PGVariantDict = ^TGVariantDict;
  TGVariantDict = record
      u : record
          case longint of
            0 : ( s : record
                asv : PGVariant;
                partial_magic : Tgsize;
                y : array[0..13] of Tguintptr;
              end );
            1 : ( x : array[0..15] of Tguintptr );
          end;
    end;

{*
 * G_VARIANT_DICT_INIT:
 * @asv: (nullable): a GVariant*
 *
 * A stack-allocated #GVariantDict must be initialized if it is used
 * together with g_auto() to avoid warnings or crashes if function
 * returns before g_variant_dict_init() is called on the builder.
 *
 * This macro can be used as initializer instead of an explicit
 * zeroing a variable when declaring it and a following
 * g_variant_dict_init(), but it cannot be assigned to a variable.
 *
 * The passed @asv has to live long enough for #GVariantDict to gather
 * the entries from, as the gathering does not happen in the
 * G_VARIANT_DICT_INIT() call, but rather in functions that make sure
 * that #GVariantDict is valid.  In context where the initialization
 * value has to be a constant expression, the only possible value of
 * @asv is %NULL.  It is still possible to call g_variant_dict_init()
 * safely with a different @asv right after the variable was
 * initialized with G_VARIANT_DICT_INIT().
 *
 * |[<!-- language="C" -->
 *   g_autoptr(GVariant) variant = get_asv_variant ();
 *   g_auto(GVariantDict) dict = G_VARIANT_DICT_INIT (variant);
 * ]|
 *
 * Since: 2.50
  }
{#define G_VARIANT_DICT_INIT(asv)                                             \ }
{                                                                            \ }
{                                                                            \ }
{                                                                            \ }
{        asv, 3488698669u /* == GVSD_MAGIC_PARTIAL, see gvariant.c */,  0,  \ }
{                                                                            \ }
{                                                                            \ }
{   }

function g_variant_dict_new(from_asv:PGVariant):PGVariantDict;cdecl;external;
procedure g_variant_dict_init(dict:PGVariantDict; from_asv:PGVariant);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_dict_lookup(dict:PGVariantDict; key:Pgchar; format_string:Pgchar; args:array of const):Tgboolean;cdecl;external;
function g_variant_dict_lookup(dict:PGVariantDict; key:Pgchar; format_string:Pgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_variant_dict_lookup_value(dict:PGVariantDict; key:Pgchar; expected_type:PGVariantType):PGVariant;cdecl;external;
(* Const before type ignored *)
function g_variant_dict_contains(dict:PGVariantDict; key:Pgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure g_variant_dict_insert(dict:PGVariantDict; key:Pgchar; format_string:Pgchar; args:array of const);cdecl;external;
procedure g_variant_dict_insert(dict:PGVariantDict; key:Pgchar; format_string:Pgchar);cdecl;external;
(* Const before type ignored *)
procedure g_variant_dict_insert_value(dict:PGVariantDict; key:Pgchar; value:PGVariant);cdecl;external;
(* Const before type ignored *)
function g_variant_dict_remove(dict:PGVariantDict; key:Pgchar):Tgboolean;cdecl;external;
procedure g_variant_dict_clear(dict:PGVariantDict);cdecl;external;
function g_variant_dict_end(dict:PGVariantDict):PGVariant;cdecl;external;
function g_variant_dict_ref(dict:PGVariantDict):PGVariantDict;cdecl;external;
procedure g_variant_dict_unref(dict:PGVariantDict);cdecl;external;
{$endif}
{ __G_VARIANT_H__  }

implementation

{ was #define dname def_expr }
function G_VARIANT_PARSE_ERROR : longint; { return type might be wrong }
  begin
    G_VARIANT_PARSE_ERROR:=g_variant_parse_error_quark;
  end;


end.
